--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
             <version>3.1.2.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 </project>
