--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,31 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    
+    <repositories>
+        <repository>
+            <id>Jahmm</id>
+            <name>Jahmm HMM library repository</name>
+            <url>http://jahmm.googlecode.com/svn/repo</url>
+        </repository>
+    </repositories>
+    
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.0</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -45,6 +69,16 @@
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-stemming-nodict</artifactId>
             <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>be.ac.ulg.montefiore.run.jahmm</groupId>
+            <artifactId>jahmm</artifactId>
+            <version>0.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.1</version>
         </dependency>
     </dependencies>
 </project>
