--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,10 @@
             <artifactId>commons-lang</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 </project>
